--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-gem2deb (0.1.0) UNRELEASED; urgency=low
+gem2deb (0.1.0) experimental; urgency=low
 
   * Initial release.
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sun, 16 Jan 2011 22:09:17 +0100
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 04 Mar 2011 09:59:56 +0100
