--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ gem2deb (0.1.1) experimental; urgency=low
   * Add --package option to gem2deb and dh-make-ruby, to specify the
     name of the package to generate
   * Generate packages that depend on ruby1.8 | ruby-interpreter.
+  * When tests fail, and user says No, do not continue.
 
  -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sat, 05 Mar 2011 20:16:09 +0100
 
