TODO++: Generate a basic debian/copyright using DEP5

--- a/debian/TODO
+++ b/debian/TODO
@@ -3,3 +3,5 @@ gem2deb currently fails to build when built in a chroot using sbuild
 it should be possible to rewrite shebangs to something else than ruby1.8
 
 handle the cases of termios and ncurses (extconf.rb in root dir)
+
+Generate a basic debian/copyright using DEP5
