--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ gem2deb (0.1.1) experimental; urgency=low
   * Generate packages that depend on ruby1.8 | ruby-interpreter.
   * When tests fail, and user says No, do not continue.
   * Add Vcs-* fields after moving to PRE repo
+  * Document that gem2deb can download the gem using gem fetch
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 11 Mar 2011 21:52:51 +0100
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 11 Mar 2011 22:02:29 +0100
 
 gem2deb (0.1.0) experimental; urgency=low
 
