Rewrite depends after dh_shlibdeps to create ORed deps.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,9 @@ gem2deb (0.1.1) experimental; urgency=low
   * Put everything in the same binary package.
   * Add a dh7 sequence.
   * Better detection of test failures. 
+  * Rewrite depends after dh_shlibdeps to create ORed deps.
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 23 Mar 2011 16:47:30 +0100
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 23 Mar 2011 16:48:01 +0100
 
 gem2deb (0.1.0) experimental; urgency=low
 
