--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,10 @@ gem2deb (0.1.1) experimental; urgency=low
   * Add a dh7 sequence.
   * Better detection of test failures. 
   * Rewrite depends after dh_shlibdeps to create ORed deps.
+  * Add perl:Depends, reorganize Depends:
+  * Switch to 3.0 (native)
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 23 Mar 2011 16:48:01 +0100
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 25 Mar 2011 07:16:00 +0100
 
 gem2deb (0.1.0) experimental; urgency=low
 
