--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.2.1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 25 Mar 2011 10:03:35 +0100
+
 gem2deb (0.2.0) unstable; urgency=low
 
   * Many, many changes to how gem2deb generates Debian packages:
