--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gem2deb (0.2.2) UNRELEASED; urgency=low
+
+  * Fix generation of Vcs-Browser.
+  * Add support for env-var DH_RUBY_GEMSPEC to specify the .gemspec.
+  * Support running dh-make-ruby over a directory.
+  * Fix: don't create native packages by default.
+
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sat, 09 Apr 2011 12:29:17 +0200
+
 gem2deb (0.2.1) unstable; urgency=low
 
   * Export RUBY_TEST_VERSION and RUBY_TEST_BIN environment variables
