--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.2.2) UNRELEASED; urgency=low
+gem2deb (0.2.2) unstable; urgency=low
 
   * Fix generation of Vcs-Browser.
   * Add support for env-var DH_RUBY_GEMSPEC to specify the .gemspec.
@@ -7,7 +7,7 @@ gem2deb (0.2.2) UNRELEASED; urgency=low
   * Remove identical duplicate files installed by rubygems in the
     arch-specific dir.
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sat, 09 Apr 2011 12:29:17 +0200
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 13 Apr 2011 23:12:50 +0200
 
 gem2deb (0.2.1) unstable; urgency=low
 
