--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
 gem2deb (0.2.4) UNRELEASED; urgency=low
 
+  [ Lucas Nussbaum ]
   * Set the team as maintainer, move myself to Uploaders.
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Tue, 17 May 2011 22:35:01 +0200
+  [ Vincent Fourmond ]
+  * Add myself to uploaders
+  * Add a rubysetuprb build system for debhelper to build packages with
+    setup.rb
+
+ -- Vincent Fourmond <fourmond@debian.org>  Mon, 06 Jun 2011 09:47:44 +0200
 
 gem2deb (0.2.3) unstable; urgency=low
 
