--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,8 @@ gem2deb (0.2.4) UNRELEASED; urgency=low
   * Merge Ubuntu-specific change which is harmless on Debian.
 
   [ Antonio Terceiro ]
-  * Do not crash when package creates subdirectories in /usr/bin (Closes: #629036)
+  * Do not crash when package creates subdirectories in /usr/bin
+    (Closes: #629036)
   * Shut up on commented 'require "rubygems"' lines (Closes: #628704)
 
  -- Antonio Terceiro <terceiro@softwarelivre.org>  Mon, 06 Jun 2011 10:33:11 -0700
