--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.2.4) UNRELEASED; urgency=low
+gem2deb (0.2.4) unstable; urgency=low
 
   [ Lucas Nussbaum ]
   * Set the team as maintainer, move myself to Uploaders.
