--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 gem2deb (0.2.5) UNRELEASED; urgency=low
 
   * Replace libshoulda-ruby1.8 for ruby-shoulda-context in Build-Depends
+  * Always create installation dirs (Closes: #630738)
 
  -- Antonio Terceiro <terceiro@softwarelivre.org>  Mon, 06 Jun 2011 21:27:23 -0700
 
