--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ gem2deb (0.2.5) UNRELEASED; urgency=low
 
   * Replace libshoulda-ruby1.8 for ruby-shoulda-context in Build-Depends
   * Always create installation dirs (Closes: #630738)
+  * gen-ruby-trans-pkgs: use Breaks: instead of Conflicts for transitional
+    packages.
 
- -- Antonio Terceiro <terceiro@softwarelivre.org>  Mon, 06 Jun 2011 21:27:23 -0700
+ -- Antonio Terceiro <terceiro@softwarelivre.org>  Sun, 19 Jun 2011 19:32:00 -0700
 
 gem2deb (0.2.4) unstable; urgency=low
 
