--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.2.6) UNRELEASED; urgency=low
+
+  * ...
+
+ -- Antonio Terceiro <terceiro@softwarelivre.org>  Sun, 19 Jun 2011 20:08:09 -0700
+
 gem2deb (0.2.5) unstable; urgency=low
 
   * Replace libshoulda-ruby1.8 for ruby-shoulda-context in Build-Depends
