--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gem2deb (0.2.9) unstable; urgency=low
+
+  [ Antonio Terceiro ]
+  * Bugfix upload.
+
+  [ Cédric Boutillier ]
+  * Do not skip tests after failing one
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sun, 18 Sep 2011 00:27:31 -0700
+
 gem2deb (0.2.8) unstable; urgency=low
 
   * Generate a non-lintian-clean copyright file
