--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gem2deb (0.2.12) unstable; urgency=low
+
+  * Added myself to uploaders
+  * Keep Lintian happy: gen-ruby-trans-pkgs sets transitional packages to
+    "Priority: extra"
+
+ -- Gunnar Wolf <gwolf@debian.org>  Tue, 22 Nov 2011 19:13:05 -0600
+
 gem2deb (0.2.11) unstable; urgency=low
 
   * Fix crash when removing duplicate files in subdirectories, e.g.
