--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.2.13) unstable; urgency=low
+
+  * Use Gem.load_yaml to require yaml, in order to ensure the definition of
+    the constant Gem::SyckDefaultKey, required by newer versions of rubygems.
+
+ -- Cédric Boutillier <cedric.boutillier@gmail.com>  Wed, 21 Dec 2011 21:14:44 +0100
+
 gem2deb (0.2.12) unstable; urgency=low
 
   * Added myself to uploaders
