--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.2.17) UNRELEASED; urgency=low
+
+  * 
+
+ -- Antonio Terceiro <terceiro@debian.org>  Thu, 14 Jun 2012 21:59:53 -0300
+
 gem2deb (0.2.16) unstable; urgency=low
 
   * Assume that any external files are UTF-8. Closes: #676192
