--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.3.0) UNRELEASED; urgency=low
+
+  *
+
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 19 Jun 2012 20:42:41 -0300
+
 gem2deb (0.2.17) unstable; urgency=low
 
   * Eliminate annoying warnings when running gem2deb/dh_ruby
