--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-gem2deb (0.3.0) UNRELEASED; urgency=low
+gem2deb (0.3.0) unstable; urgency=low
 
-  *
+  * Fix debug test mode
+  * Install gemspec for use with rubygems-integration
 
- -- Antonio Terceiro <terceiro@debian.org>  Tue, 19 Jun 2012 20:42:41 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 22 Jun 2012 09:43:33 -0300
 
 gem2deb (0.2.17) unstable; urgency=low
 
