--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.4.0) UNRELEASED; urgency=low
+
+  * 
+
+ -- Antonio Terceiro <terceiro@debian.org>  Thu, 30 May 2013 15:44:13 -0300
+
 gem2deb (0.3.1) unstable; urgency=low
 
   [ Antonio Terceiro ]
