--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.4.1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sat, 01 Jun 2013 22:46:10 -0300
+
 gem2deb (0.4.0) unstable; urgency=low
 
   [ Cédric Boutillier ]
