--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gem2deb (0.6.2) UNRELEASED; urgency=medium
+
+  * Drop -w (verbose mode) switch from shebang lines
+    - that -w does not help us much
+    - build logs will become a lot cleaner now
+  * dh_ruby: remove blank lines from --help output
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sun, 29 Dec 2013 21:48:08 -0300
+
 gem2deb (0.6.1) unstable; urgency=low
 
   [ Marc Deslauriers ]
