--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.6.2) UNRELEASED; urgency=medium
+gem2deb (0.7.0) UNRELEASED; urgency=medium
 
   [ Antonio Terceiro ]
   * Drop -w (verbose mode) switch from shebang lines
@@ -18,9 +18,9 @@ gem2deb (0.6.2) UNRELEASED; urgency=medium
       want system binaries using external interpreters.
 
   [ Cédric Boutillier ]
-  * Make build of C extensions verbose
+  * Make build of C extensions verbose (Closes: #721674)
 
- -- Antonio Terceiro <terceiro@debian.org>  Sun, 29 Dec 2013 21:48:08 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Sun, 09 Feb 2014 23:33:46 -0300
 
 gem2deb (0.6.1) unstable; urgency=low
 
