--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.7.4) unstable; urgency=medium
+
+  * dh_ruby: abort builds for unsupported Ruby versions.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 01 Apr 2014 21:41:47 -0300
+
 gem2deb (0.7.3) unstable; urgency=medium
 
   * extension_builder: create full vendorarchdir path before building
