--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.7.5) unstable; urgency=medium
+
+  * Removes mkmf.log installed at the binary extension directory by Rubygems
+    on Ruby 2.1 (Closes: #743671)
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sat, 05 Apr 2014 08:59:00 -0300
+
 gem2deb (0.7.4) unstable; urgency=medium
 
   * dh_ruby: abort builds for unsupported Ruby versions.
