--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ gem2deb (0.7.6) UNRELEASED; urgency=medium
   * dh-make-ruby: if an ITP bug exists, add its number to the generated
     changelog (Closes: #704651)
 
+  [ Cédric Boutillier ]
+  * Add a --no-wnpp-check option to dh-make-ruby to prevent dh-make-ruby to
+    check the existense of an ITP bug.
+
  -- Per Andersson <avtobiff@debian.org>  Thu, 29 May 2014 14:39:50 +0200
 
 gem2deb (0.7.5) unstable; urgency=medium
