--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gem2deb (0.8) UNRELEASED; urgency=medium
+
+  * dh_ruby_fixdepends: inject minimum Ruby dependency provided by
+    ruby-all-dev in the shared library dependencies. For that, bump dependency
+    on ruby-all-dev to (>= 1:2.1.0.3~)
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sat, 09 Aug 2014 22:35:16 -0300
+
 gem2deb (0.7.6) unstable; urgency=medium
 
   [ Antonio Terceiro ]
