--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.8) UNRELEASED; urgency=medium
+gem2deb (0.8.0) unstable; urgency=medium
 
   * dh_ruby_fixdepends: inject minimum Ruby dependency provided by
     ruby-all-dev in the shared library dependencies. For that, bump dependency
@@ -7,7 +7,7 @@ gem2deb (0.8) UNRELEASED; urgency=medium
   * test/bin/wnpp-check: mock the actual wnpp-check during tests to avoid
     hitting the network
 
- -- Antonio Terceiro <terceiro@debian.org>  Sat, 09 Aug 2014 22:35:16 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Sun, 10 Aug 2014 18:47:30 -0300
 
 gem2deb (0.7.6) unstable; urgency=medium
 
