document the changes in the changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ gem2deb (0.7.7) UNRELEASED; urgency=medium
 
   * Add no-wnpp-check option to gem2deb in integration tests
   * Update sample gems with non obsolete rake rules
+  * Verify checksums included in the gems and remove checksums.yaml.gz upon
+    conversion of the gems to tarballs (Closes: #725348)
 
  -- Cédric Boutillier <boutil@debian.org>  Mon, 11 Aug 2014 14:22:55 +0200
 
