--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 gem2deb (0.7.7) UNRELEASED; urgency=medium
 
-  * Add no-wnpp-check option to gem2deb in integration tests
+  * Add no-wnpp-check option to gem2deb and dh_make_ruby in integration tests
   * Update sample gems with non obsolete rake rules
 
  -- Cédric Boutillier <boutil@debian.org>  Mon, 11 Aug 2014 14:22:55 +0200
