--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ gem2deb (0.9.0) UNRELEASED; urgency=medium
       to debian/control template
   * Make dh-make-ruby idempotent
   * Refactor test_suite creation in dh_make_ruby
+  * Remove alternative dependency on ruby-interpreter (Closes: #758806)
 
  -- Cédric Boutillier <boutil@debian.org>  Thu, 21 Aug 2014 22:33:08 +0200
 
