--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
 gem2deb (0.9.0) UNRELEASED; urgency=medium
 
-  * Provide support for DEP-8 autopkgtest
+  * Provide support for DEP-8 autopkgtest (Closes: #637917)
     + split out a gem2deb-test-runner binary package
     + add a Testsuite: autopkgtest field to template debian/control
-    + add templates for debian/tests files and XS-Testsuite: autopkgtest field
-      to debian/control template
+    + add templates for debian/tests files to propose a syntax/load test
+      (Closes: #645357) and run the test suite of the package
   * Make dh-make-ruby idempotent
   * Refactor test_suite creation in dh_make_ruby
   * Remove alternative dependency on ruby-interpreter (Closes: #758806)
