--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.9.0) UNRELEASED; urgency=medium
+gem2deb (0.9.0) unstable; urgency=medium
 
   * Provide support for DEP-8 autopkgtest (Closes: #637917)
     + split out a gem2deb-test-runner binary package
@@ -7,11 +7,13 @@ gem2deb (0.9.0) UNRELEASED; urgency=medium
       (Closes: #645357) and run the test suite of the package
   * Make dh-make-ruby idempotent
   * Refactor test_suite creation in dh_make_ruby
+    + in particular, use the rake method by default when a spec/ directory is
+      present (Closes: #702578)
   * Remove alternative dependency on ruby-interpreter (Closes: #758806)
   * Verify checksums included in the gems and remove checksums.yaml.gz upon
     conversion of the gems to tarballs (Closes: #725348)
 
- -- Cédric Boutillier <boutil@debian.org>  Thu, 21 Aug 2014 22:33:08 +0200
+ -- Cédric Boutillier <boutil@debian.org>  Tue, 26 Aug 2014 09:12:32 +0200
 
 gem2deb (0.8.0) unstable; urgency=medium
 
