--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.9.2) UNRELEASED; urgency=medium
+
+  * gem2deb-test-runner: add '.' to $LOAD_PATH with --autopkgtest
+  * Gem2Deb::TestRunner: remove innocuous constructor
+
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 02 Sep 2014 20:10:55 -0300
+
 gem2deb (0.9.1) unstable; urgency=medium
 
   * gem2deb-test-runner now Breaks/Replaces gem2deb < 0.9. (Closes: #759431)
