--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.9.2) UNRELEASED; urgency=medium
+gem2deb (0.10) unstable; urgency=medium
 
   * gem2deb-test-runner: add '.' to $LOAD_PATH with --autopkgtest
   * dh-make-ruby won't create debian/tests/control anymore since autopkgtest
@@ -12,7 +12,7 @@ gem2deb (0.9.2) UNRELEASED; urgency=medium
     gem2deb
   * dh-make-ruby: generate uncommented Vcs-* headers in debian/control
 
- -- Antonio Terceiro <terceiro@debian.org>  Tue, 02 Sep 2014 20:10:55 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Mon, 08 Sep 2014 14:07:02 -0300
 
 gem2deb (0.9.1) unstable; urgency=medium
 
