--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ gem2deb (0.9.2) UNRELEASED; urgency=medium
   * dh-make-ruby: when test/ or spec/ exists, create debian/ruby-tests.rake
     with the appropriate rake invocation to run the tests, instead of being
     insecure and creating files all commented out.
+  * install 'gem2deb/rake/testtask.rb' to gem2deb-test-runner instead of
+    gem2deb
 
  -- Antonio Terceiro <terceiro@debian.org>  Tue, 02 Sep 2014 20:10:55 -0300
 
