--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ gem2deb (0.9.2) UNRELEASED; urgency=medium
     insecure and creating files all commented out.
   * install 'gem2deb/rake/testtask.rb' to gem2deb-test-runner instead of
     gem2deb
+  * dh-make-ruby: generate uncommented Vcs-* headers in debian/control
 
  -- Antonio Terceiro <terceiro@debian.org>  Tue, 02 Sep 2014 20:10:55 -0300
 
