--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.11) UNRELEASED; urgency=medium
+gem2deb (0.11) unstable; urgency=medium
 
   * dh-make-ruby: generate 'Testsuite: autopkgtest-pkg-ruby' to not conflict
     with DEP-8 spec (i.e., if the 'Testsuite' field contains 'autopkgtest',
@@ -7,7 +7,7 @@ gem2deb (0.11) UNRELEASED; urgency=medium
       test control data that uses gem2deb-test-runner will be used.
   * improved "usage: " banner in several of the provided programs
 
- -- Antonio Terceiro <terceiro@debian.org>  Mon, 15 Sep 2014 10:28:55 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Wed, 15 Oct 2014 16:16:04 -0300
 
 gem2deb (0.10) unstable; urgency=medium
 
