--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.11) unstable; urgency=medium
+gem2deb (0.11) UNRELEASED; urgency=medium
 
   * dh-make-ruby: generate 'Testsuite: autopkgtest-pkg-ruby' to not conflict
     with DEP-8 spec (i.e., if the 'Testsuite' field contains 'autopkgtest',
